# moving-ball-simulator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
